--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,5 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #f5f5f5; /* This is a greyish white color */
+  background: #f5f5f5;
 }
